add div to index file, update styles sheet.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,9 @@
-h2.intro {
+.intro {
   font-weight: bold;
-}
-
-p.intro {
   font-style: italic;
+  color: red;
 }
 
-img.intro {
+img {
   width: 50%;
 }
